<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewLogsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TableLayout
		android:id="@+id/data_table"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
            <TableRow>
                
				<TextView
					android:text="@string/nameTable"
					android:minWidth="70dp"/>
				<TextView
					android:text="@string/deptTable"
					android:minWidth="70dp"/>
				<TextView
					android:text="@string/stampTable"
					android:minWidth="100dp"/>
                
			</TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>
